--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://kukulam.dev'
+baseURL = 'https://kukulam.github.io'
 languageCode = 'en-us'
 title = 'Milosz Kukula dev blog'
 theme = 'loveit'
