--- a/config.toml
+++ b/config.toml
@@ -16,15 +16,7 @@ theme = 'loveit'
     post = ""
     name = "Posts"
     url = "/posts/"
-    title = ""
-  [[menu.main]]
-    weight = 2
-    identifier = "tags"
-    pre = ""
-    post = ""
-    name = "Tags"
-    url = "/tags/"
-    title = ""
+    title = "Posts"
   [[menu.main]]
     weight = 2
     identifier = "about"
@@ -35,12 +27,28 @@ theme = 'loveit'
     title = ""
   [[menu.main]]
     weight = 3
+    identifier = "trainings"
+    pre = ""
+    post = ""
+    name = "Trainings"
+    url = "/trainings"
+    title = "Trainings"
+  [[menu.main]]
+    weight = 4
     identifier = "categories"
     pre = ""
     post = ""
     name = "Categories"
     url = "/categories/"
-    title = ""
+    title = "Categories"
+  [[menu.main]]
+    weight = 5
+    identifier = "tags"
+    pre = ""
+    post = ""
+    name = "Tags"
+    url = "/tags/"
+    title = "Tags"
 
 [params.header]
   desktopMode = "fixed"
