--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "kukulam.dev"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
