new post about s3 ttl

--- a/config.toml
+++ b/config.toml
@@ -71,7 +71,7 @@ theme = 'loveit'
   gravatarEmail = "kukula.milosz@gmail.com"
   avatarURL = "/images/avatar.png"
   title = ""
-  subtitle = "clouds, databases, kubernetes, terraform, go"
+  subtitle = "clouds, databases, kubernetes, terraform, jvm, go"
   typeit = true
   social = true
   disclaimer = ""
