--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/loveit"]
-	path = themes/loveit
-	url = https://github.com/dillonzq/LoveIt
+# [submodule "themes/loveit"]
+# 	path = themes/loveit
+# 	url = https://github.com/dillonzq/LoveIt
